small tweak to fix unwanted scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100dvh;
     margin: 0;
     background-color: #fff;
     color: #222;
